# sysnet-gov-django

./: .env.template  .gitignore  ARCH_REVIEW.md  CHANGELOG.md  GAP_ANALYSIS.md  Gap_Analysis_Report.md  README.md  SOUL.md  USER.md  auth_task.json  docker-compose.yml  extract_text.py  ippc_document_router.py.new  ippc_document_router.py.tmp  manage.py  package.json  pyproject.toml  run_agent.py  tsconfig.json  vite.lib.config.ts
.github/workflows/: ci.yml  release.yml
apps/audit/: models.py
core/: settings.py  urls.py
devops/contabo-api/references/: api-research.md
docs/: COMPONENTS.md
example/: manage.py
example/core/: settings.py  urls.py
example/templates/: index.html
projects/models/persons/: README.md
projects/persons/tests/: test_auth.py
scripts/: sync_ui.py
src/: App.vue  index.ts
src/assets/css/: components.css  tokens.css
src/components/base/: GovAlert.vue  GovBreadcrumbs.vue  GovButton.vue  GovCard.vue  GovField.vue  GovIcon.vue  GovInput.vue  GovLogo.vue  GovModal.vue  GovTable.vue
src/components/layout/: GovHeader.vue  GovMasterLayout.vue  GovSidebar.vue
sysnet_auth.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
sysnet_gov_django/: apps.py  forms.py
sysnet_gov_django/components/breadcrumbs/: breadcrumbs.html  breadcrumbs.py
sysnet_gov_django/components/button/: button.html  button.py
sysnet_gov_django/components/card/: card.html  card.py
sysnet_gov_django/components/field/: field.html  field.py
sysnet_gov_django/components/footer/: footer.html  footer.py
sysnet_gov_django/components/form/: layout.html  layout.py  master.html  master.py
sysnet_gov_django/components/modal/: modal.html  modal.py
sysnet_gov_django/components/navbar/: navbar.html  navbar.py
sysnet_gov_django/components/select/: select.html  select.py
sysnet_gov_django/components/sidebar/: sidebar.html  sidebar.py
sysnet_gov_django/components/table/: table.html  table.py
sysnet_gov_django/templates/gov_django/components/: button.html
sysnet_gov_django/templatetags/: gov_tags.py
