[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
# Distribucni nazev na internim PyPi. Import path zustava \`\`auth_lib\`\`.
name = "sysnet-auth"
version = "0.2.8"
description = "Sdilena autentizacni knihovna pro FastAPI mikrosluzby s Keycloack (OIDC/JWT)."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "SYSNET s.r.o." },
]
license = { text = "GNU Affero General Public License v3" }
keywords = ["fastapi", "keycloak", "jwt", "oidc", "auth", "sysnet"]
classifiers = [
    "Framework :: FastAPI",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Security",
    "Typing :: Typed",
    "License :: OSI Approved :: GNU Affero General Public License v3",
]

dependencies = [
    "fastapi>=0.115,<1",
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.3,<3",
    "pyjwt[crypto]>=2.9,<3",
    "httpx>=0.27,<1",
    "sysnet-pyutils>=0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<10",
    "pytest-asyncio>=0.23,<1",
    "pytest-cov>=5.0,<8",
    "cryptography>=42.0,<48",
    "mypy>=1.11,<2",
    "ruff>=0.6,<1",
]

[project.urls]
Homepage = "https://sysnet.cz"
Repository = "https://github.com/SYSNET-CZ/auth-lib"
Documentation = "https://github.com/SYSNET-CZ/auth-lib#readme"
"Bug Tracker" = "https://github.com/SYSNET-CZ/auth-lib/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["auth_lib*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
"auth_lib" = ["py.typed"]

[tool.pytest.ini_options]
# Explicitne vyzadujeme asyncio pro testy
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "ASYNC", "S", "SIM"]
ignore = ["S101", "B008"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_unreachable = true
show_error_codes = true
disallow_any_generics = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["tests.*", "scripts.*"]
ignore_errors = true

[[tool.mypy.overrides]]
module = "jwt.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sysnet_pyutils.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tomli.*"
ignore_missing_imports = true
