[project]
name = "sysnet-gov-django"
version = "0.1.0"
description = "Django boilerplate for Gov projects based on GDS 4"
requires-python = ">=3.12"
dependencies = [
    "django==5.1.4",
    "psycopg[binary]==3.2.3",
    "django-environ==0.11.2",
    "django-extensions==3.2.3",
    "django-cors-headers==4.6.0",
    "gunicorn==23.0.0",
    "pydantic==2.10.3",
]

[tool.uv]
managed = true
package = false
