[project]
name = "sysnet-gov-django"
version = "0.1.0"
description = "Django UI library for Gov.cz projects based on GDS 4 tokens"
authors = [
    { name = "Radim Jäger", email = "rjaeger@sysnet.cz" }
]
requires-python = ">=3.12"
dependencies = [
    "django>=5.0",
    "django-components>=0.100",
    "django-htmx>=1.17.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sysnet_gov_django"]
